--- a/templates/_modules/lista.html
+++ b/templates/_modules/lista.html
@@ -5,8 +5,8 @@
 		<meta name="viewport" content="witdth=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0">
 		<title>lista_productos</title>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<script type="text/javascript" src="js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
+		<script type="text/javascript" src="../../static/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="../../static/js/jquery-3.1.1.min.js"></script>
 	</head>
 	<body>
 		<header class="page-header">
@@ -15,7 +15,7 @@
 				</div>
 				<div class="col-xs-2 col-md-2" >
 					<div >
-						<img src="./img/logo.jpg" alt="logo" class="img-thumbnail">
+						<img src="../../static/img/logo.jpg" alt="logo" class="img-thumbnail">
 					</div>
 				</div>
 				<div class="col-xs-10 col-md-8">
@@ -50,7 +50,7 @@
 					<!--Articulo1-->
 					<div class="col-xs-6 col-md-4">
 						<div class="thumbnail btn btn-primary">
-							<img src="./img/obj_list1.jpg" alt="imagen">
+							<img src="../../static/img/obj_list1.jpg" alt="imagen">
 						</div>
 						<div class="thumbnail panel-primary">
 							<header class="panel-heading"><h4>Memoria 16GB</h4></header>
@@ -61,7 +61,7 @@
 					<!--Articulo2-->
 					<div class="col-xs-6 col-md-4">
 						<div class="thumbnail btn btn-primary">
-							<img src="./img/obj_list2.jpg" alt="imagen">
+							<img src="../../static/img/obj_list2.jpg" alt="imagen">
 						</div>
 						<div class="thumbnail panel-primary">
 							<header class="panel-heading"><h4>    Weimei We 16GB</h4></header>
@@ -72,7 +72,7 @@
 						<!--Articulo3-->
 						<div class="col-xs-6 col-md-4">
 							<div class="thumbnail btn btn-primary">
-								<img src="./img/obj_list3.jpg" alt="imagen">
+								<img src="../../static/img/obj_list3.jpg" alt="imagen">
 							</div>
 							<div class="thumbnail panel-primary">
 								<header class="panel-heading"><h4>    Maizu M3 Note 16GB</h4></header>
@@ -83,7 +83,7 @@
 					<!--Articulo4-->
 					<div class="col-xs-6 col-md-4">
 						<div class="thumbnail btn btn-primary">
-							<img src="./img/obj_list4.jpg" alt="imagen">
+							<img src=".../../static/img/obj_list4.jpg" alt="imagen">
 						</div>
 						<div class="thumbnail panel-primary">
 							<header class="panel-heading"><h4>    750 Evo SSD 250GB</h4></header>
@@ -94,7 +94,7 @@
 					<!--Articulo5-->
 					<div class="col-xs-6 col-md-4">
 						<div class="thumbnail btn btn-primary">
-							<img src="./img/obj_list5.jpg" alt="imagen">
+							<img src=".../../static/img/obj_list5.jpg" alt="imagen">
 						</div>
 						<div class="thumbnail panel-primary">
 							<header class="panel-heading"><h4>    Reproductor MP3 MicroSD</h4></header>
@@ -105,7 +105,7 @@
 					<!--Articulo6-->
 					<div class="col-xs-6 col-md-4">
 						<div class="thumbnail btn btn-primary">
-							<img src="./img/obj_list6.jpg" alt="imagen">
+							<img src=".../../static/img/obj_list6.jpg" alt="imagen">
 						</div>
 						<div class="thumbnail panel-primary">
 							<header class="panel-heading"><h4>    MP3 Clip Mint</h4></header>
