--- a/templates/_modules/registro_login.html
+++ b/templates/_modules/registro_login.html
@@ -4,9 +4,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="witdth=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0">
 		<title>registro_login</title>
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<script type="text/javascript" src="js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="../../static/css/bootstrap.min.css">
+		<script type="text/javascript" src="../../static/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="../../static/js/jquery-3.1.1.min.js"></script>
 	</head>
 	<body>
 		<header class="page-header">
@@ -15,7 +15,7 @@
 				</div>
 				<div class="col-xs-2 col-md-2" >
 					<div >
-						<img src="./img/logo.jpg" alt="logo" class="img-thumbnail">
+						<img src="../../static/img/logo.jpg" alt="logo" class="img-thumbnail">
 					</div>
 				</div>
 				<div class="col-xs-10 col-md-8">
