cambios min lista y login

--- a/templates/_modules/lista.html
+++ b/templates/_modules/lista.html
@@ -3,39 +3,37 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="witdth=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0">
-		<title>lista_productos</title>
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<script type="text/javascript" src="../../static/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="../../static/js/jquery-3.1.1.min.js"></script>
+		<meta name="theme-color" content="#d43f3a"/>
+		<link rel="icon" href="">
+		<title>SuluShop | lista_productos</title>
+		<link href="../../static/css/bootstrap.min.css" rel="stylesheet">
+		<link href="../../static/css/style.css" rel="stylesheet">
 	</head>
 	<body>
-		<header class="page-header">
-			<div class="row" style="background:#428BCA">
-				<div class="col-xs-0 col-md-2">
+		<nav class="navbar navbar-default">
+			<div class="container">
+				<div class="navbar-header">
+					<a class="" href="../../index.html">
+						<img alt="Brand" src="../../static/img/eshop.png">
+					</a>
 				</div>
-				<div class="col-xs-2 col-md-2" >
-					<div >
-						<img src="../../static/img/logo.jpg" alt="logo" class="img-thumbnail">
+				<p class="navbar-text">SuluShop company</p>
+				<div class="navbar-right">
+					<div class="btn-group" role="group">
+						<a href=""class="btn btn-default navbar-btn glyphicon glyphicon-user"> Login</a>
+						<a href=""class="btn btn-warning navbar-btn glyphicon glyphicon-shopping-cart"></a>
 					</div>
 				</div>
-				<div class="col-xs-10 col-md-8">
-					<div class="col-xs-1 col-md-3">
-					</div>
-					<div class="col-xs-9 col-md-5">
-						<form class="navbar-form navbar-left" role="search">
-	  						<div class="form-group">
-	    						<input type="text" class="form-control" placeholder="Search">
-								<button type="button" class="btn btn-default navbar-btn"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
-	  						</div>
-							<div class="form-group">
-								<button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></button>
-								<button type="button" class="btn btn-default navbar-btn"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></button>
-							</div>
-						</form>
-					</div>
+				<div class="navbar-right">
+					<form class="navbar-form" role="search">
+						<div class="form-group">
+							<input type="text" class="form-control" placeholder="buscar">
+						</div>
+						<button type="submit" class="btn btn-default">Buscar</button>
+					</form>
 				</div>
 			</div>
-		</header>
+		</nav>
 		<div class="container">
 			<section class="panel-primary">
 				<div class="panel-heading">
@@ -83,7 +81,7 @@
 					<!--Articulo4-->
 					<div class="col-xs-6 col-md-4">
 						<div class="thumbnail btn btn-primary">
-							<img src=".../../static/img/obj_list4.jpg" alt="imagen">
+							<img src="../../static/img/obj_list4.jpg" alt="imagen">
 						</div>
 						<div class="thumbnail panel-primary">
 							<header class="panel-heading"><h4>    750 Evo SSD 250GB</h4></header>
@@ -94,7 +92,7 @@
 					<!--Articulo5-->
 					<div class="col-xs-6 col-md-4">
 						<div class="thumbnail btn btn-primary">
-							<img src=".../../static/img/obj_list5.jpg" alt="imagen">
+							<img src="../../static/img/obj_list5.jpg" alt="imagen">
 						</div>
 						<div class="thumbnail panel-primary">
 							<header class="panel-heading"><h4>    Reproductor MP3 MicroSD</h4></header>
@@ -105,7 +103,7 @@
 					<!--Articulo6-->
 					<div class="col-xs-6 col-md-4">
 						<div class="thumbnail btn btn-primary">
-							<img src=".../../static/img/obj_list6.jpg" alt="imagen">
+							<img src="../../static/img/obj_list6.jpg" alt="imagen">
 						</div>
 						<div class="thumbnail panel-primary">
 							<header class="panel-heading"><h4>    MP3 Clip Mint</h4></header>
@@ -116,6 +114,15 @@
 				</div>
 			</section>
 		</div>
-
+		<footer class="footer">
+			<div class="container">
+				<p class="text-muted">
+					Ipsum incidunt blanditiis iusto facere dignissimos. Aperiam repellendus veniam vitae porro impedit vitae veritatis. Expedita sint exercitationem quo optio impedit? Autem neque nihil magni odit maiores expedita? Ipsa porro id.
+				</p>
+			</div>
+			<script src="../../static/js/jquery-3.1.1.min.js"></script>
+			<script src="../../static/js/bootstrap.min.js"></script>
+			<script src="../../static/js/vendor/stars.js"></script>
+		</footer>
 	</body>
 </html>
