--- a/templates/_modules/registro_login.html
+++ b/templates/_modules/registro_login.html
@@ -3,36 +3,37 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="witdth=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0">
-		<title>registro_login</title>
-		<link rel="stylesheet" type="text/css" href="../../static/css/bootstrap.min.css">
-		<script type="text/javascript" src="../../static/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="../../static/js/jquery-3.1.1.min.js"></script>
+		<meta name="theme-color" content="#d43f3a"/>
+		<link rel="icon" href="">
+		<title>SuluShop | registro_login</title>
+		<link href="../../static/css/bootstrap.min.css" rel="stylesheet">
+		<link href="../../static/css/style.css" rel="stylesheet">
 	</head>
 	<body>
-		<header class="page-header">
-			<div class="row" style="background:#428BCA">
-				<div class="col-xs-0 col-md-2">
+		<nav class="navbar navbar-default">
+			<div class="container">
+				<div class="navbar-header">
+					<a class="" href="../../index.html">
+						<img alt="Brand" src="../../static/img/eshop.png">
+					</a>
 				</div>
-				<div class="col-xs-2 col-md-2" >
-					<div >
-						<img src="../../static/img/logo.jpg" alt="logo" class="img-thumbnail">
+				<p class="navbar-text">SuluShop company</p>
+				<div class="navbar-right">
+					<div class="btn-group" role="group">
+						<a href=""class="btn btn-default navbar-btn glyphicon glyphicon-user"> Login</a>
+						<a href=""class="btn btn-warning navbar-btn glyphicon glyphicon-shopping-cart"></a>
 					</div>
 				</div>
-				<div class="col-xs-10 col-md-8">
-					<div class="col-xs-1 col-md-3">
-					</div>
-					<div class="col-xs-9 col-md-5">
-						<form class="navbar-form navbar-left" role="search">
-	  						<div class="form-group">
-	    						<input type="text" class="form-control" placeholder="Search">
-								<button type="button" class="btn btn-default navbar-btn"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
-	  						</div>
-							
-						</form>
-					</div>
+				<div class="navbar-right">
+					<form class="navbar-form" role="search">
+						<div class="form-group">
+							<input type="text" class="form-control" placeholder="buscar">
+						</div>
+						<button type="submit" class="btn btn-default">Buscar</button>
+					</form>
 				</div>
 			</div>
-		</header>
+		</nav>
 		<div class="container">
 				<div class="row">
 					<div class="col-md-6">
@@ -104,5 +105,15 @@
 
 				</div>
 		</div>
+		<footer class="footer">
+			<div class="container">
+				<p class="text-muted">
+					Ipsum incidunt blanditiis iusto facere dignissimos. Aperiam repellendus veniam vitae porro impedit vitae veritatis. Expedita sint exercitationem quo optio impedit? Autem neque nihil magni odit maiores expedita? Ipsa porro id.
+				</p>
+			</div>
+			<script src="../../static/js/jquery-3.1.1.min.js"></script>
+			<script src="../../static/js/bootstrap.min.js"></script>
+			<script src="../../static/js/vendor/stars.js"></script>
+		</footer>		
 	</body>
 </html>
