--- a/templates/_modules/contrase+¦a.html
+++ b/templates/_modules/contrase+¦a.html
@@ -53,33 +53,19 @@
 				</div>
 				<div class="col-md-9">
 					<form>
-  <div class="form-group">
-    <label for="exampleInputName">Nombre</label>
-    <input type="Nombre" class="form-control" id="exampleInputName" placeholder="Nombre" value="Ruben">
+						<div class="form-group">
+    <label for="exampleInputName">Antigua contrasena</label>
+    <input type="Nombre" class="form-control" id="exampleInputName" placeholder="Antigua contrasena">
   </div>
   <div class="form-group">
-    <label for="exampleInputApellidos">Apellidos</label>
-    <input type="apellidos" class="form-control" id="exampleInputApellidos" placeholder="Apellidos" value="Jarne Cabanero">
+    <label for="exampleInputApellidos">Nueva contrasena</label>
+    <input type="password" class="form-control" id="exampleInputApellidos" placeholder="Nueva contrasena">
 	</div>
 <div class="form-group">
-    <label for="exampleInputFecha">Fecha</label>
-    <input type="date" class="form-control" id="exampleInputFecha" placeholder="dd/mm/aaaa" value="12/01/1996">
+    <label for="exampleInputFecha">Repetir nueva contrasena</label>
+    <input type="password" class="form-control" id="exampleInputFecha" placeholder="Repetir contrasena">
   </div>
-	<div class="form-group">
-    <label for="exampleInputDireccion">Direccion</label>
-    <input type="direccion" class="form-control" id="exampleInputDireccion" placeholder="Direccion" value="Alarife Marien de Marguan 6,6,A">
-  </div>
-	<div class="form-group">
-    <label for="exampleInputTelefono">Telefono</label>
-    <input type="phone" class="form-control" id="exampleInputTelefono" placeholder="Telefono" value="645515267">
-  </div>
-	<div class="form-group">
-    <label for="exampleInputEmail1">E-mail</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" value="rubenbros@hotmail.es">
-  </div>
-  <button type="submit" class="btn btn-primary">Guardar Cambios</button></br></br><button type="reset" class="btn btn-default">Restablecer Cambios</button>
-</form>
-<a href="perfil.html"></br><button type="submit" class="btn btn-default">Cancelar</button></a>
+						<button type="submit" class="btn btn-primary">Guardar Cambios</button></br></br><button type="submit" class="btn btn-default">Cancelar</button></a>
 				</div>
 			</div>
 		</div>
@@ -163,7 +149,7 @@
 		</div>
 	</div>
 </div>
-	<hr>
+<hr>
     <script src="../../static/js/jquery.min.js"></script>
     <script src="../../static/js/bootstrap.min.js"></script>
     <script src="../../static/js/scripts.js"></script>
