--- a/templates/_modules/perfil.html
+++ b/templates/_modules/perfil.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -16,11 +16,33 @@
   </head>
   <body>
 
+<nav class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="" href="../../index.html">
+            <img alt="Brand" src="../../static/img/eshop.png">
+          </a>
+        </div>
+        <p class="navbar-text">SuluShop company</p>
+        <div class="navbar-right">
+          <div class="btn-group" role="group">
+            <a href=""class="btn btn-default navbar-btn glyphicon glyphicon-user"> Ruben</a>
+            <a href=""class="btn btn-warning navbar-btn glyphicon glyphicon-shopping-cart"></a>
+          </div>
+        </div>
+        <div class="navbar-right">
+          <form class="navbar-form" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="buscar">
+            </div>
+            <button type="submit" class="btn btn-default">Buscar</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+    <!--fin barra de navegacion-->
     <div class="container-fluid">
 	<div class="row">
-		<div class="col-md-12">
-			<p>Parte de arriba</p>
-		</div>
 	</div>
 	<div class="row">
 		<div class="col-md-8">
@@ -30,8 +52,8 @@
 			<hr>
 			<div class="row">
 				<div class="col-md-3">
-					<img alt="Bootstrap Image Preview" src="http://lorempixel.com/140/140/"/ width=200 height=200><br/>
-					<br/><input type="button" value="Cambiar imagen"/>
+					<img alt="Bootstrap Image Preview" src="http://lorempixel.com/140/140/"/ width=200 height=200><br/></br>
+				<button type="file" class="btn btn-default">Cambiar imagen...</button>
 				</div>
 				<div class="col-md-9">
 					<p><b>Nombre:</b><br>Ruben<br></p>
@@ -40,13 +62,14 @@
 					<p><b>Direccion:</b><br>Alarife marien de Marguan 6,6A<br></p>
 					<p><b>Telefono:</b><br>645515267<br></p>
 					<p><b>E-mail:</b><br>rubenbros@hotmail.es<br></p>
-					<br/><a href="contraseña.html"><button>Cambiar contrasena</button>
-					<a href="modificar.html"><button>Modificar datos</button></a>
+					<br/><a href="contraseña.html"><button type="button" class="btn btn-default">Cambiar contrasena</button>
+					<a href="modificar.html"><button type="button" class="btn btn-default">Modificar datos</button></a>
 					<br/><a href="eliminar.html">Eliminar cuenta</a>
 				</div>
 			</div>
 		</div>
 		<div class="col-md-4">
+<!--ACTIVIDAD DEL USUARIO-->
 			<h3>
 				Actividad.
 			</h3>
@@ -163,7 +186,7 @@
 		</div>
 	</div>
 </div>
-
+<!--FIN ACTIVIDAD-->
     <script src="../../static/js/jquery.min.js"></script>
     <script src="../../static/js/bootstrap.min.js"></script>
     <script src="../../static/js/scripts.js"></script>
