--- a/templates/_modules/contrase+¦a.html
+++ b/templates/_modules/contrase+¦a.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Mi perfil</title>
-
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
-
+    <meta charset="UTF-8">
+    <meta name="author" content="unizar"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="theme-color" content="#d43f3a"/>
+    <link rel="icon" href="">
+    <title>SuluShop | Contrasena</title>
     <link href="../../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../../static/css/style.css" rel="stylesheet">
-
   </head>
   <body>
 <nav class="navbar navbar-default">
@@ -150,8 +146,14 @@
 	</div>
 </div>
 <hr>
-    <script src="../../static/js/jquery.min.js"></script>
-    <script src="../../static/js/bootstrap.min.js"></script>
-    <script src="../../static/js/scripts.js"></script>
-  </body>
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">
+        Ipsum incidunt blanditiis iusto facere dignissimos. Aperiam repellendus veniam vitae porro impedit vitae veritatis. Expedita sint exercitationem quo optio impedit? Autem neque nihil magni odit maiores expedita? Ipsa porro id.
+        </p>
+      </div>
+      <script src="../../static/js/jquery-3.1.1.min.js"></script>
+      <script src="../../static/js/bootstrap.min.js"></script>
+      <script src="../../static/js/vendor/stars.js"></script>
+    </footer>
 </html>
