war y enlaces finales

--- a/templates/_modules/detalle.html
+++ b/templates/_modules/detalle.html
@@ -23,8 +23,8 @@
         <p class="navbar-text">SuluShop company</p>
         <div class="navbar-right">
           <div class="btn-group" role="group">
-            <a href=""class="btn btn-default navbar-btn glyphicon glyphicon-user"> Login</a>
-            <a href=""class="btn btn-warning navbar-btn glyphicon glyphicon-shopping-cart"></a>
+            <a href="perfil.html" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Jorge</a>
+            <a href="lista.html" class="btn btn-warning navbar-btn glyphicon glyphicon-shopping-cart"></a>
           </div>
         </div>
         <div class="navbar-right">
