--- a/templates/_modules/contraseña.html
+++ b/templates/_modules/contraseña.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Mi perfil</title>
-
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
-
+    <meta charset="UTF-8">
+    <meta name="author" content="unizar"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="theme-color" content="#d43f3a"/>
+    <link rel="icon" href="">
+    <title>SuluShop | Contrasena</title>
     <link href="../../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../../static/css/style.css" rel="stylesheet">
-
   </head>
   <body>
-
+<nav class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="" href="../../index.html">
+            <img alt="Brand" src="../../static/img/eshop.png">
+          </a>
+        </div>
+        <p class="navbar-text">SuluShop company</p>
+        <div class="navbar-right">
+          <div class="btn-group" role="group">
+            <a href="perfil.html"class="btn btn-default navbar-btn glyphicon glyphicon-user"> Ruben</a>
+            <a href="lista.html"class="btn btn-warning navbar-btn glyphicon glyphicon-shopping-cart"></a>
+          </div>
+        </div>
+        <div class="navbar-right">
+          <form class="navbar-form" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="buscar">
+            </div>
+            <button type="submit" class="btn btn-default">Buscar</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+    <!--fin barra de navegacion-->
     <div class="container-fluid">
-	<div class="row">
-		<div class="col-md-12">
-			<p>Parte de arriba</p>
-		</div>
-	</div>
 	<div class="row">
 		<div class="col-md-8">
 			<h1 class="text-left">
@@ -34,10 +49,19 @@
 				</div>
 				<div class="col-md-9">
 					<form>
-						<p><b>Antigua contrasena:</b><br><input type="text" name="old"/><br></p>
-						<p><b>Nueva contrasena:</b><br><input type="password" name="new"/><br></p>
-						<p><b>Repite nueva contrasena:</b><br><input type="password" name="new2"/><br></p>
-						<br/><input type="submit" value="Cambiar"/></form><a href="perfil.html"><button>Cancelar</button></a>
+						<div class="form-group">
+    <label for="exampleInputName">Antigua contrasena</label>
+    <input type="Nombre" class="form-control" id="exampleInputName" placeholder="Antigua contrasena">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputApellidos">Nueva contrasena</label>
+    <input type="password" class="form-control" id="exampleInputApellidos" placeholder="Nueva contrasena">
+	</div>
+<div class="form-group">
+    <label for="exampleInputFecha">Repetir nueva contrasena</label>
+    <input type="password" class="form-control" id="exampleInputFecha" placeholder="Repetir contrasena">
+  </div>
+						<button type="submit" class="btn btn-primary">Guardar Cambios</button></br></br><button type="submit" class="btn btn-default">Cancelar</button></a>
 				</div>
 			</div>
 		</div>
@@ -122,8 +146,14 @@
 	</div>
 </div>
 <hr>
-    <script src="../../static/js/jquery.min.js"></script>
-    <script src="../../static/js/bootstrap.min.js"></script>
-    <script src="../../static/js/scripts.js"></script>
-  </body>
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">
+        Ipsum incidunt blanditiis iusto facere dignissimos. Aperiam repellendus veniam vitae porro impedit vitae veritatis. Expedita sint exercitationem quo optio impedit? Autem neque nihil magni odit maiores expedita? Ipsa porro id.
+        </p>
+      </div>
+      <script src="../../static/js/jquery-3.1.1.min.js"></script>
+      <script src="../../static/js/bootstrap.min.js"></script>
+      <script src="../../static/js/vendor/stars.js"></script>
+    </footer>
 </html>
