registro_login, y perfil
Estructuras y funciones para pasar al login, volver a la lista con el
formulario, o ir al registro y que el formulario te lleve al perfil

--- a/sulushop/templates/_modules/nav.html
+++ b/sulushop/templates/_modules/nav.html
@@ -3,14 +3,14 @@
   <div class="container">
     <div class="navbar-header">
       <a class="" href="index.html">
-        <img alt="Brand" src="static/img/eshop.png">
+        <img alt="Brand" src="/static/img/eshop.png">
       </a>
     </div>
     <p class="navbar-text">SuluShop company</p>
     <div class="navbar-right">
       <div class="btn-group" role="group">
-        <a href="templates/_modules/registro_login.html" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Login</a>
-        <a href="templates/_modules/lista.html" class="btn btn-warning navbar-btn glyphicon glyphicon-shopping-cart"></a>
+        <a href="/registro_login.html" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Login</a>
+        <a href="/lista.html" class="btn btn-warning navbar-btn glyphicon glyphicon-shopping-cart"></a>
       </div>
     </div>
     <div class="navbar-right">
