--- a/sulushop/templates/_modules/nav.html
+++ b/sulushop/templates/_modules/nav.html
@@ -10,7 +10,7 @@
     <div class="navbar-right">
       <div class="btn-group" role="group">
         <a href="/registro_login.html" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Login</a>
-        <a href="/lista.html" class="btn btn-warning navbar-btn glyphicon glyphicon-shopping-cart"></a>
+        <a href="/carrito" class="btn btn-warning navbar-btn glyphicon glyphicon-shopping-cart"></a>
       </div>
     </div>
     <div class="navbar-right">
