--- a/sulushop/templates/_layouts/base.html
+++ b/sulushop/templates/_layouts/base.html
@@ -7,9 +7,10 @@
     <link rel="icon" href="">
     <title>{% block title %}SuluShop{% endblock %}</title>
     {% block css %}
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/style.css" rel="stylesheet">
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/style.css" rel="stylesheet">
     {% endblock %}
+    <base href="/" target="" />
   </head>
   <body>
     {% include "_modules/nav.html" %}
@@ -19,9 +20,9 @@
     <footer class="footer">
       {% include "_modules/footer.html" %}
       {% block js %}
-      <script src="/static/js/jquery-3.1.1.min.js"></script>
-      <script src="/static/js/bootstrap.min.js"></script>
-      <script src="/static/js/vendor/stars.js"></script>
+      <script src="static/js/jquery-3.1.1.min.js"></script>
+      <script src="static/js/bootstrap.min.js"></script>
+      <script src="static/js/vendor/stars.js"></script>
       {% endblock %}
     </footer>
   </body>
