--- a/sulushop/templates/_views/perfil.html
+++ b/sulushop/templates/_views/perfil.html
@@ -26,7 +26,7 @@ Perfil | {{ super() }}
 					<p><b>Fecha de nacimiento:</b><br>12-01-1996<br></p>
 					<p><b>Direccion:</b><br>Alarife marien de Marguan 6,6A<br></p>
 					<p><b>Telefono:</b><br>645515267<br></p>
-					<p><b>E-mail:</b><br>rubenbros@hotmail.es<br></p>
+					<p><b>E-mail:</b><br>{{saves.get('email')}}<br></p>
 					<br/><a href="contraseña.html"><button type="button" class="btn btn-default">Cambiar contrasena</button>
 					<a href="modificar.html"><button type="button" class="btn btn-default">Modificar datos</button></a>
 					<br/><a href="eliminar.html">Eliminar cuenta</a>
