--- a/sulushop/templates/_views/perfil.html
+++ b/sulushop/templates/_views/perfil.html
@@ -21,12 +21,14 @@ Perfil | {{ super() }}
 				<button type="file" class="btn btn-default">Cambiar imagen...</button>
 				</div>
 				<div class="col-md-9">
-					<p><b>Nombre:</b><br>{{saves.get('userLogin[nombre]', ' ')}} <br></p>
-					<p><b>Apellidos:</b><br>{{saves.get('userLogin[apellidos]', ' ')}} <br></p>
-					<p><b>Fecha de nacimiento:</b><br>{{saves.get('userLogin[nacimiento]', ' ')}} <br></p>
-					<p><b>Direccion:</b><br>{{saves.get('userLogin[direccion]', ' ')}} <br></p>
-					<p><b>Telefono:</b><br>{{saves.get('userLogin[telefono]', ' ')}} <br></p>
-					<p><b>E-mail:</b><br>{{saves.get('userLogin[email]', ' ')}}<br></p>
+					{% for saves in save%}
+					<p><b>Nombre:</b><br>{{saves[0] }}<br></p>
+					<p><b>Apellidos:</b><br>{{saves[1]}}<br></p>
+					<p><b>Fecha de nacimiento:</b><br>{{ saves[2] }}<br></p>
+					<p><b>Direccion:</b><br>{{ saves[3] }}<br></p>
+					<p><b>Telefono:</b><br>{{saves[4] }}<br></p>
+					<p><b>E-mail:</b><br>{{saves[5]}}<br></p>
+					{% endfor %}
 					<br/><a href="contraseña.html"><button type="button" class="btn btn-default">Cambiar contrasena</button>
 					<a href="modificar.html"><button type="button" class="btn btn-default">Modificar datos</button></a>
 					<br/><a href="/logout/">Eliminar cuenta</a>
