--- a/sulushop/templates/_views/perfil.html
+++ b/sulushop/templates/_views/perfil.html
@@ -31,7 +31,7 @@ Perfil | {{ super() }}
 					{% endfor %}
 					<br/><a href="contraseña.html"><button type="button" class="btn btn-default">Cambiar contrasena</button>
 					<a href="modificar.html"><button type="button" class="btn btn-default">Modificar datos</button></a>
-					<br/><a href="/logout/">Eliminar cuenta</a>
+					<br/><a href="/deletUser/">Eliminar cuenta</a>
 				</div>
 			</div>
 		</div>
